# lumos

./: .gitignore  404.html  Dockerfile  README.md  __init__.py  docker-compose.yml  index.html  lumos.py  pyproject.toml  requirements.txt  sitemap.xml
ai_utils/: index.html
book_parser/: index.html
client/: index.html
data/__MACOSX/data/: ._robert.pdf_mathpix.md
data/data/: robert.pdf_mathpix.md
docs/: book_parser.md  index.md  server_client.md
examples/asyncio/: index.html
exp/: bg_app.py
lumos/: __init__.py  app.py  book_parser.py  book_section_sorter.py  lumos.py  lumos_client.py  utils.py
lumos/_experimental/: book_parser.ipynb
lumos/book/: element_processor.py  markdown_utils.py  models.py  parser.py  toc.py  toc_ai.py  toc_common.py  utils.py  visualizer.py
lumos/server/: app.py
lumos/utils/: app.py  cache.py  client.py
search/: search_index.json
server/: index.html
server_client/: index.html
tests/: test_book_parser.py  test_lumos.py
tests/tests_book/: almanack_toc_sanitized.txt  almanack_toc_sanitized_out.txt  asyncio_toc_sanitized.txt  test_toc.py  test_toc_ai.py
