[project]
name = "lumos"
version = "0.0.6"
authors = [
    { name = "Arun Patro", email = "arun@lumiralabs.com" },
]
description = "A package for AI interactions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "fire>=0.7.0",
    "litellm>=1.55.12",
    "pydantic>=2.10.4",
    "rich>=13.9.4",
    "structlog>=24.4.0",
    "unstructured-ingest>=0.3.11",
    "unstructured>=0.16.11",
    "uvicorn>=0.34.0",
    "pymupdf>=1.25.1",
    "python-magic>=0.4.27",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "memory-profiler>=0.61.0",
    "pip>=24.3.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.25.0",
]

[tool.uv.workspace]
members = ["lumos/book"]
