[project]
name = "lumos"
version = "0.1.0"
description = ""
authors = [
    {name = "Arun Patro",email = "arun.kumar.patro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fire (>=0.7.0,<0.8.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "litellm (>=1.58.2,<2.0.0)",
    "unstructured[pdf] (>=0.16.13,<0.17.0)",
    "pymupdf (>=1.25.1,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "rich (>=13.9.4,<14.0.0)",
    "fastapi (>=0.115.6,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pre-commit = "^4.0.1"
pytest = "^8.3.4"

